HelloUltraviolet/Fixtures/RejectedSource/Expressions/PipelineTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the PipelineTypeMismatch rejected-source specimen.

expectedDiagnostic("E-SEM-2539", "rule.16.T-Pipeline-TypeMismatch-Err")
